// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a small variant of the component 1`] = `
<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-small Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    class="AssetCard__wrapper"
  >
    <div
      class="AssetCard__header"
    />
    <div
      class="AssetCard__content"
    >
      <div
        class="Asset AssetCard__asset"
        data-test-id="cf-ui-asset"
      >
        <div
          class="Asset__image-container"
        >
          <img
            alt="picture of a cat"
            class="Asset__image-container__image"
            src="https://via.placeholder.com/200x300"
          />
        </div>
        <div
          class="Asset__title-container"
        >
          <span
            class="Asset__title-container__title"
          >
            picture of a cat
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component 1`] = `
<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-default Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    class="AssetCard__wrapper"
  >
    <div
      class="AssetCard__header"
    />
    <div
      class="AssetCard__content"
    >
      <div
        class="Asset AssetCard__asset"
        data-test-id="cf-ui-asset"
      >
        <div
          class="Asset__image-container"
        >
          <img
            alt="picture of a cat"
            class="Asset__image-container__image"
            src="https://via.placeholder.com/200x300"
          />
        </div>
        <div
          class="Asset__title-container"
        >
          <span
            class="Asset__title-container__title"
          >
            picture of a cat
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component in loading state 1`] = `
<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-default Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <svg
    aria-label="Loading component..."
    class="SkeletonContainer"
    data-test-id="cf-ui-skeleton-form"
    height="100%"
    preserveAspectRatio="xMidYMid meet"
    role="img"
    width="240"
  >
    <title>
      Loading component...
    </title>
    <rect
      clip-path="url(#cf-ui-skeleton-clip-0)"
      height="100%"
      style="fill: url(#cf-ui-skeleton-clip-gradient-1);"
      width="100%"
      x="0"
      y="0"
    />
    <defs>
      <clippath
        id="cf-ui-skeleton-clip-0"
      >
        <rect
          data-test-id="cf-ui-skeleton-image"
          height="70"
          rx="0"
          ry="0"
          width="70"
          x="85"
          y="100"
        />
        <rect
          height="16"
          rx="0"
          ry="0"
          width="100"
          x="70"
          y="190"
        />
      </clippath>
      <lineargradient
        id="cf-ui-skeleton-clip-gradient-1"
      >
        <stop
          offset="0%"
          stop-color="#e5ebed"
          stop-opacity="1"
        >
          <animate
            attributeName="stop-color"
            dur="2s"
            id="animation-2"
            repeatCount="indefinite"
            values="#e5ebed; #f7f9fa; #e5ebed"
          />
        </stop>
        <stop
          offset="50%"
          stop-color="#f7f9fa"
          stop-opacity="1"
        >
          <animate
            attributeName="stop-color"
            begin="animation-2.begin+0.25s"
            dur="2s"
            repeatCount="indefinite"
            values="#e5ebed; #f7f9fa; #e5ebed"
          />
        </stop>
        <stop
          offset="100%"
          stop-color="#e5ebed"
          stop-opacity="1"
        >
          <animate
            attributeName="stop-color"
            begin="animation-2.begin+0.5s"
            dur="2s"
            repeatCount="indefinite"
            values="#e5ebed; #f7f9fa; #e5ebed"
          />
        </stop>
      </lineargradient>
    </defs>
  </svg>
</div>
`;

exports[`renders the component with a custom drag handle 1`] = `
.emotion-0 {
  display: inline-block;
  fill: #606C7C;
  height: 18px;
  width: 18px;
}

<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-default my-extra-class Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    class="CardDragHandle"
    data-test-id="cf-ui-card-drag-handle"
  >
    <svg
      class="emotion-0"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
      />
    </svg>
    <span
      class="CardDragHandle__sr-label"
    >
      Reorder card
    </span>
  </div>
  <div
    class="AssetCard__wrapper"
  >
    <div
      class="AssetCard__header"
    />
    <div
      class="AssetCard__content"
    >
      <div
        class="Asset AssetCard__asset"
        data-test-id="cf-ui-asset"
      >
        <div
          class="Asset__image-container"
        >
          <img
            alt="picture of a cat"
            class="Asset__image-container__image"
            src="https://via.placeholder.com/200x300"
          />
        </div>
        <div
          class="Asset__title-container"
        >
          <span
            class="Asset__title-container__title"
          >
            picture of a cat
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component with a drag handle 1`] = `
.emotion-0 {
  display: inline-block;
  fill: #606C7C;
  height: 18px;
  width: 18px;
}

<div>
  <div
    aria-label="picture of a cat"
    class="Card AssetCard AssetCard--size-default my-extra-class Card--padding-none"
    data-test-id="cf-ui-asset-card"
    title="picture of a cat"
  >
    <div
      class="CardDragHandle"
      data-test-id="cf-ui-card-drag-handle"
    >
      <svg
        class="emotion-0"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
      <span
        class="CardDragHandle__sr-label"
      >
        Reorder entry
      </span>
    </div>
    <div
      class="AssetCard__wrapper"
    >
      <div
        class="AssetCard__header"
      />
      <div
        class="AssetCard__content"
      >
        <div
          class="Asset AssetCard__asset"
          data-test-id="cf-ui-asset"
        >
          <div
            class="Asset__image-container"
          >
            <img
              alt="picture of a cat"
              class="Asset__image-container__image"
              src="https://via.placeholder.com/200x300"
            />
          </div>
          <div
            class="Asset__title-container"
          >
            <span
              class="Asset__title-container__title"
            >
              picture of a cat
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component with actions 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #2D64B3;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #2D64B3;
  height: 18px;
  width: 18px;
}

<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-default Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    class="AssetCard__wrapper"
  >
    <div
      class="AssetCard__header"
    >
      <div
        class="Dropdown AssetCard__actions"
        data-test-id="cf-ui-card-actions"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="IconButton IconButton--secondary"
          data-node-id="dropdown-trigger-61728000"
          data-test-id="cf-ui-icon-button"
          type="button"
        >
          <span
            class="emotion-1 IconButton__inner"
            tabindex="-1"
          >
            <svg
              class="IconButton__icon emotion-0"
              data-test-id="cf-ui-icon"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
            <span
              class="IconButton__label"
            >
              Actions
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      class="AssetCard__content"
    >
      <div
        class="Asset AssetCard__asset"
        data-test-id="cf-ui-asset"
      >
        <div
          class="Asset__image-container"
        >
          <img
            alt="picture of a cat"
            class="Asset__image-container__image"
            src="https://via.placeholder.com/200x300"
          />
        </div>
        <div
          class="Asset__title-container"
        >
          <span
            class="Asset__title-container__title"
          >
            picture of a cat
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-default my-extra-class Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    class="AssetCard__wrapper"
  >
    <div
      class="AssetCard__header"
    />
    <div
      class="AssetCard__content"
    >
      <div
        class="Asset AssetCard__asset"
        data-test-id="cf-ui-asset"
      >
        <div
          class="Asset__image-container"
        >
          <img
            alt="picture of a cat"
            class="Asset__image-container__image"
            src="https://via.placeholder.com/200x300"
          />
        </div>
        <div
          class="Asset__title-container"
        >
          <span
            class="Asset__title-container__title"
          >
            picture of a cat
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component with status 1`] = `
.emotion-0 {
  display: inline-block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  border-radius: 4px;
  color: #A82D3E;
  background-color: #FCE9E8;
  padding: 0 0.5rem;
  font-size: calc(1rem * (12 / 16));
  line-height: 20px;
  max-height: 20px;
}

.emotion-1 {
  display: inline-block;
  fill: #2D64B3;
  height: 18px;
  width: 18px;
}

<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-default Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    class="AssetCard__wrapper"
  >
    <div
      class="AssetCard__header"
    >
      <div
        class="emotion-0"
        data-test-id="cf-ui-badge"
      >
        archived
      </div>
    </div>
    <div
      class="AssetCard__content"
    >
      <div
        class="Asset AssetCard__asset"
        data-test-id="cf-ui-asset"
      >
        <div
          class="Asset__asset-container"
        >
          <div
            class="Asset__illustration-container"
          >
            <svg
              class="AssetIcon emotion-1"
              data-test-id="cf-ui-asset-icon"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                clip-rule="evenodd"
                d="M0.5 0C0.223858 0 0 0.223858 0 0.5V23.5C0 23.7761 0.223858 24 0.5 24H19.5C19.7761 24 20 23.7761 20 23.5V6.5C20 6.36739 19.9473 6.24021 19.8536 6.14645L13.8536 0.146447C13.7598 0.0526784 13.6326 0 13.5 0H0.5ZM1 23V1H13V6.5C13 6.77614 13.2239 7 13.5 7H19V23H1ZM18.2929 6L14 1.70711V6H18.2929Z"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M12.0532 10.5028C12.2543 10.5244 12.4226 10.6649 12.4797 10.8589L14.9797 19.3589C15.0241 19.5101 14.9947 19.6734 14.9003 19.7995C14.8059 19.9257 14.6576 20 14.5 20H4.5C4.32671 20 4.16578 19.9103 4.07468 19.7629C3.98357 19.6155 3.97529 19.4314 4.05279 19.2764L6.55279 14.2764C6.62466 14.1326 6.76126 14.0322 6.91991 14.0065C7.07856 13.9807 7.23991 14.0328 7.35355 14.1464L8.88104 15.6739L11.5611 10.7606C11.6579 10.583 11.8521 10.4813 12.0532 10.5028ZM11.8609 12.2991L9.43895 16.7394C9.36349 16.8778 9.22724 16.9724 9.07127 16.9949C8.9153 17.0174 8.75787 16.965 8.64645 16.8535L7.13698 15.3441L5.30902 19H13.8318L11.8609 12.2991Z"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M6 8C5.44772 8 5 8.44772 5 9C5 9.55228 5.44772 10 6 10C6.55228 10 7 9.55228 7 9C7 8.44772 6.55228 8 6 8ZM4 9C4 7.89543 4.89543 7 6 7C7.10457 7 8 7.89543 8 9C8 10.1046 7.10457 11 6 11C4.89543 11 4 10.1046 4 9Z"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <span
            class="Asset__asset-container__title"
          >
            picture of a cat
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component without actions 1`] = `
<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-default Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    class="AssetCard__wrapper"
  >
    <div
      class="AssetCard__header"
    />
    <div
      class="AssetCard__content"
    >
      <div
        class="Asset AssetCard__asset"
        data-test-id="cf-ui-asset"
      >
        <div
          class="Asset__image-container"
        >
          <img
            alt="picture of a cat"
            class="Asset__image-container__image"
            src="https://via.placeholder.com/200x300"
          />
        </div>
        <div
          class="Asset__title-container"
        >
          <span
            class="Asset__title-container__title"
          >
            picture of a cat
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
